--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile 'net.tirasa.connid:connector-test-common:1.5.0.0'
     compile 'org.apache.httpcomponents:httpclient:4.5.10'
     compile 'org.mockito:mockito-core:3.1.0'
+    compile 'junit:junit:4.12'
 }
 
 task generatePom {
