--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
     api 'org.apache.httpcomponents:httpclient:4.5.10'
     api 'org.mockito:mockito-core:3.1.0'
     api 'junit:junit:4.12'
+
+    testImplementation 'net.tirasa.connid:connector-framework-internal:1.5.0.0'
 }
 
 task generatePom {
