--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,7 @@ dependencies {
     api 'org.mockito:mockito-core:3.1.0'
     api 'junit:junit:4.12'
     api 'org.apache.commons:commons-lang3:3.8.1'
-
-    testImplementation 'net.tirasa.connid:connector-framework-internal:1.5.0.0'
+    api 'net.tirasa.connid:connector-framework-internal:1.5.0.0'
 }
 
 task sourceJar(type: Jar) {
